Bug #313639 --> phantom scrollbars, difficulty scrolling web pages on the mac.

Back out bug #311399 --> Crash [@ SetOrigin] during rendering context destruction [Mac]

a=schrep/me