mozilla/gfx/src/mac/nsRenderingContextMac.cpp
@@ -76,6 +76,10 @@
 nsRenderingContextMac::nsRenderingContextMac()
 : mP2T(1.0f)
 , mContext(nsnull)
+#ifndef MOZ_WIDGET_COCOA
+, mSavePort(nsnull)
+, mSaveDevice(nsnull)
+#endif /* ! MOZ_WIDGET_COCOA */
 , mCurrentSurface(nsnull)
 , mPort(nsnull)
 , mGS(nsnull)
@@ -93,6 +97,13 @@ nsRenderingContextMac::~nsRenderingContextMac()
 {
 	// restore stuff
 	NS_IF_RELEASE(mContext);
+
+#ifndef MOZ_WIDGET_COCOA
+  if (mSavePort) {
+    ::SetGWorld(mSavePort, mSaveDevice);
+    ::SetOrigin(mSavePortRect.left, mSavePortRect.top);
+  }
+#endif /* ! MOZ_WIDGET_COCOA */
 
 	// release surfaces
 	NS_IF_RELEASE(mFrontSurface);
@@ -197,6 +208,15 @@ void nsRenderingContextMac::SelectDrawingSurface(nsDrawingSurfaceMac* aSurface, 
 
   NS_ASSERTION(ValidateDrawingState(), "Bad drawing state");
 
+#ifndef MOZ_WIDGET_COCOA
+  if (!mSavePort) {
+    ::GetGWorld(&mSavePort, &mSaveDevice);
+    if (mSavePort) {
+      ::GetPortBounds(mSavePort, &mSavePortRect);
+    }
+  }
+#endif /* ! MOZ_WIDGET_COCOA */
+	
 	// if surface is changing, be extra conservative about graphic state changes.
 	if (mCurrentSurface != aSurface)
 	{
